# random_phrase_api

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Taskfile.yml  entrypoint.sh  phrases.txt  pyproject.toml  random_phrase_api.py
.github/workflows/: build-and-deploy.yaml  image-build-on-push.yml
argocd/: backend_app.yml
deploy/argocd/: application.yaml  kustomization.yaml  project.yaml
deploy/kubevela/: app.yaml  env-trait.yaml  kustomization.yml  probe-trait.yaml
deploy/kubevela-custom-webservice/: custom-app.yaml  kustomization.yml
deploy/kubevela/policies/traits/: trait-httproute.yaml
kube/kustomize/base/: deployment.yaml  hpa.yml  httproute.yaml  kustomization.yaml  service.yaml
reports/: coverage.xml  xunit.xml
templates/: index.html  phrase.html
tests/: conftest.py  test_api.py
