[tool.poetry]
name = "random-phrase-api"
version = "0.1.0"
description = "flask api that returns a random phrase"
authors = ["adhatcher <aaron@aaronhatcher.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
prometheus-client = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
