[tool.poetry]
name = "random-phrase-api"
version = "0.1.0"
description = "flask api that returns a random phrase"
authors = ["adhatcher <aaron@aaronhatcher.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
prometheus-client = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=random_phrase_api --cov-report=term-missing --cov-report=xml:reports/coverage.xml --cov-fail-under=90"
